--- a/python datastrucures in google colab.ipynb
+++ b/python datastrucures in google colab.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPeU0c/a6I2yyjBx0y8nEBv",
+      "authorship_tag": "ABX9TyPJvS50jswpZNPxtt17zImB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -52,6 +52,43 @@
         "print(\"hello world\")\n",
         "print(\"this\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum = 300\n",
+        "counter = 0\n",
+        "try:\n",
+        "  print(300/0)\n",
+        "except:\n",
+        "  print (\"division error\")"
+      ],
+      "metadata": {
+        "id": "DxQkKJn95eZo",
+        "outputId": "0d1e9137-a3e9-4ae9-cb03-1560687c8f26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "division error\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dVZ7YwnF5txL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
