--- a/python datastrucures in google colab.ipynb
+++ b/python datastrucures in google colab.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPJvS50jswpZNPxtt17zImB",
+      "authorship_tag": "ABX9TyNdCyFZrk2UeB/4OWHLsBrt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,11 +64,11 @@
         "  print (\"division error\")"
       ],
       "metadata": {
-        "id": "DxQkKJn95eZo",
-        "outputId": "0d1e9137-a3e9-4ae9-cb03-1560687c8f26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DxQkKJn95eZo",
+        "outputId": "0d1e9137-a3e9-4ae9-cb03-1560687c8f26"
       },
       "execution_count": 5,
       "outputs": [
@@ -83,12 +83,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "stocks = ['playway', 'boombit', 'cd projekt']\n",
+        "a = lambda x:len(x)\n",
+        "stocks = list(map(a,stocks))\n",
+        "print(stocks)"
+      ],
       "metadata": {
-        "id": "dVZ7YwnF5txL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dVZ7YwnF5txL",
+        "outputId": "fc667e57-f12d-46ef-e1c0-e8cade25087a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7, 7, 10]\n"
+          ]
+        }
+      ]
     }
   ]
 }
