--- a/python datastrucures in google colab.ipynb
+++ b/python datastrucures in google colab.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdCyFZrk2UeB/4OWHLsBrt",
+      "authorship_tag": "ABX9TyOOFgIwa/QOECWWnoekJkjL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,6 +103,56 @@
           "name": "stdout",
           "text": [
             "[7, 7, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stocks = [(1, 3), (4, 1), (4, 3), (0, 8)]\n",
+        "stocks.sort(key=lambda x:x[1])\n",
+        "print(stocks)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "HFpmMD4779sS",
+        "outputId": "95540ac3-1954-481e-d894-701a6769e871",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(4, 1), (1, 3), (4, 3), (0, 8)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "func_ = lambda x,y:x+y+2\n",
+        "print(func_(1,2))"
+      ],
+      "metadata": {
+        "id": "czR_bGVg8T4W",
+        "outputId": "866f59d5-5878-40e0-f439-1b772beeb778",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
           ]
         }
       ]
