--- a/python datastrucures in google colab.ipynb
+++ b/python datastrucures in google colab.ipynb
@@ -6,7 +6,7 @@
       "name": "intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOOFgIwa/QOECWWnoekJkjL",
+      "authorship_tag": "ABX9TyN/TZOgncSNP0QCm54DOX1M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,24 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dWdoQMMI8xjV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oI97TfYU8ybc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "sum = 300\n",
         "counter = 0\n",
@@ -70,7 +88,7 @@
         "id": "DxQkKJn95eZo",
         "outputId": "0d1e9137-a3e9-4ae9-cb03-1560687c8f26"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +114,7 @@
         "id": "dVZ7YwnF5txL",
         "outputId": "fc667e57-f12d-46ef-e1c0-e8cade25087a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +140,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,6 +174,183 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fnames = ['data1.txt', 'data2.txt', 'data3.txt', 'view.jpg']\n",
+        "def file_gen(fname):\n",
+        "   for i in fname:\n",
+        "     if i.endswith(\".txt\"):\n",
+        "       yield i\n",
+        "print(list(file_gen(fnames)))"
+      ],
+      "metadata": {
+        "id": "ZgUswDM-80df",
+        "outputId": "4426db84-495e-4125-9747-3495eeef9e75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['data1.txt', 'data2.txt', 'data3.txt']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def enum(word):\n",
+        "  for i in range(len(word)):\n",
+        "    yield i,word[i]\n",
+        "\n",
+        "k = list(enum(['TEN', 'CDR', 'BBT']))\n",
+        "print(k)\n",
+        "\n",
+        "  \n",
+        "  \n"
+      ],
+      "metadata": {
+        "id": "AmB9L7vO9jq4",
+        "outputId": "a93d6fa3-97a6-4fd2-fb3f-57dec4a1e92d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(0, 'TEN'), (1, 'CDR'), (2, 'BBT')]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = {1,1,1,1,1,}\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "wDejGbCg-B2e",
+        "outputId": "fbf175fd-be0a-4587-f1b6-8aaac6914edf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stocks = ['Playway', 'CD Projekt', 'Boombit']\n",
+        "print({i:len(i) for i in stocks})"
+      ],
+      "metadata": {
+        "id": "c5Tvkd2pB45L",
+        "outputId": "815f5b4a-99dc-43c1-f5bb-dc361cd04b79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Playway': 7, 'CD Projekt': 10, 'Boombit': 7}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import calendar\n",
+        "\n",
+        "print(calendar.calendar(2022))"
+      ],
+      "metadata": {
+        "id": "VpoZbirR9vof",
+        "outputId": "236cc133-16d2-4ff2-8070-360d84d7a5b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                  2022\n",
+            "\n",
+            "      January                   February                   March\n",
+            "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+            "                1  2          1  2  3  4  5  6          1  2  3  4  5  6\n",
+            " 3  4  5  6  7  8  9       7  8  9 10 11 12 13       7  8  9 10 11 12 13\n",
+            "10 11 12 13 14 15 16      14 15 16 17 18 19 20      14 15 16 17 18 19 20\n",
+            "17 18 19 20 21 22 23      21 22 23 24 25 26 27      21 22 23 24 25 26 27\n",
+            "24 25 26 27 28 29 30      28                        28 29 30 31\n",
+            "31\n",
+            "\n",
+            "       April                      May                       June\n",
+            "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+            "             1  2  3                         1             1  2  3  4  5\n",
+            " 4  5  6  7  8  9 10       2  3  4  5  6  7  8       6  7  8  9 10 11 12\n",
+            "11 12 13 14 15 16 17       9 10 11 12 13 14 15      13 14 15 16 17 18 19\n",
+            "18 19 20 21 22 23 24      16 17 18 19 20 21 22      20 21 22 23 24 25 26\n",
+            "25 26 27 28 29 30         23 24 25 26 27 28 29      27 28 29 30\n",
+            "                          30 31\n",
+            "\n",
+            "        July                     August                  September\n",
+            "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+            "             1  2  3       1  2  3  4  5  6  7                1  2  3  4\n",
+            " 4  5  6  7  8  9 10       8  9 10 11 12 13 14       5  6  7  8  9 10 11\n",
+            "11 12 13 14 15 16 17      15 16 17 18 19 20 21      12 13 14 15 16 17 18\n",
+            "18 19 20 21 22 23 24      22 23 24 25 26 27 28      19 20 21 22 23 24 25\n",
+            "25 26 27 28 29 30 31      29 30 31                  26 27 28 29 30\n",
+            "\n",
+            "      October                   November                  December\n",
+            "Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su\n",
+            "                1  2          1  2  3  4  5  6                1  2  3  4\n",
+            " 3  4  5  6  7  8  9       7  8  9 10 11 12 13       5  6  7  8  9 10 11\n",
+            "10 11 12 13 14 15 16      14 15 16 17 18 19 20      12 13 14 15 16 17 18\n",
+            "17 18 19 20 21 22 23      21 22 23 24 25 26 27      19 20 21 22 23 24 25\n",
+            "24 25 26 27 28 29 30      28 29 30                  26 27 28 29 30 31\n",
+            "31\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h43Fj10ICneC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
